--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -98,6 +98,7 @@
     <script src="app/app.module.js"></script>
     <script src="app/uml-editor/umleditor.state.js"></script>
     <script src="app/uml-editor/umleditor.component.js"></script>
+    <script src="app/uml-editor/results/uml-result.component.js"></script>
     <script src="app/services/user/user.service.js"></script>
     <script src="app/services/profiles/profile.service.js"></script>
     <script src="app/services/profiles/page-ribbon.directive.js"></script>
