--- a/src/main/webapp/app/uml-editor/results/uml-result.html
+++ b/src/main/webapp/app/uml-editor/results/uml-result.html
@@ -1,5 +1,6 @@
 <span ng-if="!$ctrl.hasResults()">
-    <span class="text-muted" ng-if="!($ctrl.queued) && !($ctrl.building)"><i class="fa fa-circle-o fa-lg"></i>&nbsp;No results</span>
+    <span class="text-muted" ng-if="$ctrl.loading && (!$ctrl.queued && !$ctrl.building)"><i class="fa fa-circle-o-notch fa-lg fa-spin"></i>&nbsp;Loading...</span>
+    <span class="text-muted" ng-if="!$ctrl.loading && !$ctrl.queued && !$ctrl.building"><i class="fa fa-circle-o fa-lg"></i>&nbsp;No results</span>
     <span class="text-primary" ng-if="$ctrl.queued"><i class="fa fa-circle-o-notch fa-lg fa-spin"></i>&nbsp;Test is queued</span>
     <span class="text-primary" ng-if="$ctrl.building"><i class="fa fa-circle-o-notch fa-lg fa-spin"></i>&nbsp;Testing...</span>
 </span>
