--- a/src/main/webapp/app/uml-editor/results/uml-result-detail.html
+++ b/src/main/webapp/app/uml-editor/results/uml-result-detail.html
@@ -9,29 +9,38 @@
     <div class="text-muted" id="result-detail-spinner" ng-switch-when="true"><i
         class="fa fa-circle-o-notch fa-lg fa-spin "></i></div>
 
-    <div ng-switch-when="false" ng-if="$ctrl.buildResult !=null">
+    <div ng-switch-when="false" ng-if="$ctrl.buildResult.result != null">
 
-        <p>We have compared your submission with the provided sample solution. You got {{$ctrl.buildResult.result.score}} of {{$ctrl.buildResult.result.maxScore}} ({{$ctrl.buildResult.parityWithSampleSolution}}) and here is why:</p>
+        <p>We have compared your submission with the provided sample solution. You got <strong>{{$ctrl.buildResult.result.score}}
+            of {{$ctrl.buildResult.result.maxScore}} ({{$ctrl.buildResult.parityWithSampleSolution}})</strong> and here
+            is why:</p>
 
-        <div ng-repeat="detail in $ctrl.details track by $index" ng-init="lastDetail = $last">
-            <p>Error in <code>{{detail.methodName}}</code>:</p>
-            <div ng-repeat="error in detail.errors.error">
-                <pre ng-bind="error.message.split('\n')[0]"></pre>
+        <!-- Assessment Errors -->
+        <div ng-if="$ctrl.buildResult.result.errors.length > 0">
+            <span class="text-danger"><i class="fa fa-lg fa-times-circle-o"></i>&nbsp; Errors: </span>
+            <div ng-repeat="error in $ctrl.buildResult.result.errors track by $index" ng-init="lastError = $last">
+                <div ng-repeat="error in detail.errors.error">
+                    <pre>{{error.errorMessage}}</pre>
+                </div>
+                <hr ng-if="!lastError">
             </div>
-            <hr ng-if="!lastDetail">
         </div>
-
-
-
 
     </div>
 
-    <div ng-switch-when="false" ng-if="$ctrl.details.length == 0">
+    <div ng-switch-when="false" ng-if="$ctrl.buildLogs != null">
         <dl class="buildoutput dl-horizontal" ng-hide="$ctrl.buildLogs.length == 0">
             <dt ng-repeat-start="logEntry in $ctrl.buildLogs">{{logEntry.time | date:'yyyy-MM-dd HH:mm:ss'}}</dt>
             <dd ng-repeat-end ng-bind-html="logEntry.log"></dd>
         </dl>
     </div>
+
+    <div ng-switch-when="false" ng-if="$ctrl.buildResult.internalErrorMessage != null">
+        <pre>
+            {{$ctrl.buildResult.internalErrorMessage}}
+        </pre>
+    </div>
+
 
 </div>
 <div class="modal-footer">
