--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="content/css/main.css">
     <!-- endbuild -->
 
+
+    <link rel="stylesheet" href="static/uml-result/css/uml-result.css">
     <link rel="shortcut icon" href="content/images/logo_l1_weiss.png">
 </head>
 <body ng-app="exerciseApplicationApp" ng-class="bodyClass" ng-strict-di>
